<resources>
    <string name="app_name">ExpMeal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">login</string>
    <string name="signup_now">If yo not have accout Signup now!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">register</string>
    <string name="login_now">If you have account Login now!</string>
    <string name="meal">Meal</string>
    <string name="generate_new_meal">Generate new meal</string>
    <string name="name_error">Name error</string>
    <string name="email_error">Email error</string>
    <string name="phone_error">Phone error</string>
    <string name="password_error">Password error</string>
    <string name="error">Error!!</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category: </string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="how_to">How to prepare food</string>
    <string name="preparation_time">Preparation time</string>
    <string name="min">min</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="add">add</string>
    <string name="meal_name">Meal name</string>
    <string name="favourite_meals">Favourite meals</string>
    <string name="ingredients_error">ingredients empty</string>
    <string name="how_to_error">add how to prepare food</string>
    <string name="perperation_error">add perperation time</string>
    <string name="category_error">select a category</string>
    <string name="appwidget_text">Exp Meal</string>
    <string name="empty">Empty!!</string>
</resources>
