<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="@dimen/no_thing"
        app:contentInsetStart="@dimen/no_thing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/add_new_meal"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/background_gray_ripple"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:text="@string/add"
                android:textColor="@android:color/holo_red_dark" />

            <View
                style="@style/view_width"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/meal_image"
        android:layout_width="@dimen/CircleImageView_size"
        android:layout_height="@dimen/CircleImageView_size"
        android:layout_marginTop="@dimen/CircleImageView_margin_top"
        android:src="@drawable/meal_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/lin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_image"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/meal_name"
            android:textSize="@dimen/textViewSize" />

        <EditText
            android:id="@+id/meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textViewSize" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/ingredients"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_text_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <LinearLayout
        android:id="@+id/lin_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_ingredients">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/textViewSize" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/breakfast" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/lunch" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/dinner" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_how_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_category">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to"
            android:textSize="@dimen/textViewSize" />

        <EditText
            android:id="@+id/edit_text_how_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textViewSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_how_to">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation_time"
            android:textSize="@dimen/textViewSize" />

        <EditText
            android:id="@+id/edit_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textSize="@dimen/textViewSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>