<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eslamwael74.inq.expmeal.LoginActivity">


    <LinearLayout
        android:id="@+id/lin_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_vertical_margin_lin_top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="@dimen/login_register_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            app:errorEnabled="true"
            android:layout_width="@dimen/login_register_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/button_register_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:text="@string/login"
        android:background="@drawable/border_black_btn"
        app:layout_constraintLeft_toLeftOf="@+id/lin_inputs"
        app:layout_constraintRight_toRightOf="@+id/lin_inputs"
        app:layout_constraintTop_toBottomOf="@+id/lin_inputs" />


    <TextView
        android:id="@+id/register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/now_vertical_margin"
        android:gravity="center"
        android:text="@string/signup_now"
        app:layout_constraintLeft_toLeftOf="@+id/btn_login"
        app:layout_constraintRight_toRightOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</android.support.constraint.ConstraintLayout>
