<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="@dimen/no_thing"
            app:contentInsetStart="@dimen/no_thing">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_meal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/meal"
                    android:textColor="@android:color/holo_red_dark" />

                <LinearLayout
                    android:id="@+id/lin_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fav_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_gray_ripple"
                        android:paddingLeft="@dimen/image_toolbar_padding"
                        android:paddingRight="@dimen/image_toolbar_padding"
                        android:src="@drawable/ic_star_border_red_24dp"
                        android:contentDescription="@string/meal" />


                    <View style="@style/view_height" />

                </LinearLayout>

                <View
                    style="@style/view_width"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/meal_image"
        android:layout_width="@dimen/CircleImageView_size"
        android:layout_height="@dimen/CircleImageView_size"
        android:layout_marginTop="@dimen/CircleImageView_margin_top"
        android:src="@drawable/meal_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/ingredients"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_image"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <LinearLayout
        android:id="@+id/lin_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ingredients">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/textViewSize" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textSize="@dimen/textViewSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_how_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_category">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to"
            android:textSize="@dimen/textViewSize" />

        <TextView
            android:id="@+id/tv_how_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textViewSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/btn_home_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_how_to">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation_time"
            android:textSize="@dimen/textViewSize" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textSize="@dimen/textViewSize" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>