<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:elevation="@dimen/toolbar_elevation"
                android:theme="?attr/actionBarTheme"
                app:contentInsetEnd="@dimen/no_thing"
                app:contentInsetStart="@dimen/no_thing">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/lin_add"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:orientation="horizontal">

                        <View style="@style/view_height" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_gray_ripple"
                            android:paddingLeft="@dimen/image_toolbar_padding"
                            android:paddingRight="@dimen/image_toolbar_padding"
                            android:src="@drawable/ic_add_red_24dp"
                            android:contentDescription="@string/add" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/meal"
                        android:textColor="@android:color/holo_red_dark" />

                    <LinearLayout
                        android:id="@+id/lin_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_gray_ripple"
                            android:paddingLeft="@dimen/image_toolbar_padding"
                            android:paddingRight="@dimen/image_toolbar_padding"
                            android:src="@drawable/ic_star_red_24dp"
                            android:contentDescription="@string/favourite_meals" />


                        <View style="@style/view_height" />

                    </LinearLayout>

                    <View
                        style="@style/view_width"
                        android:layout_alignParentBottom="true" />

                </RelativeLayout>


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/meal_vertical_margin"
            android:background="@drawable/background_gray_ripple"
            android:clickable="true"
            app:cardCornerRadius="78dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            tools:ignore="MissingConstraints"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/circle_home_padding"
                android:text="@string/meal"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/btn_generate_new_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_home_vertical_margin"
            android:background="@drawable/border_black_btn"
            android:paddingLeft="@dimen/btn_home_padding"
            android:paddingRight="@dimen/btn_home_padding"
            android:text="@string/generate_new_meal"
            app:layout_constraintLeft_toLeftOf="@+id/card"
            app:layout_constraintRight_toRightOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/card" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>